Home page compleated, added other pages from bootstrap

--- a/index.html
+++ b/index.html
@@ -5,10 +5,219 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Andrew French CV</title>
+
 </head>
 
 <body>
+
+    <!-- HERO SECTION -->
+    <div id="hero-section" class="text-center">
+        <div>
+            <h1 class="display-1">Andrew French</h1>
+            <h4 class="display-4">Web Developer</h4>
+        </div>
+    </div>
+
+
+    <!--  NAVBAR -->
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-4">
+        <div class="container">
+            <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
+            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarcollapse">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item active">
+                        <a href="index.html" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="services.html" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="skills.html" class="nav-link">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+    <!-- HOMESECTION-1 -->
+
+    <section id="homesection-1" class="bg-white py-4 text-dark text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 text-center">
+                    <h2 class="display-3">What I Do</h2>
+                    <p>Hi my names Andrew French and im a front end web developer, i produce multiple page websites to
+                        meet
+                        peoples individual requirements using the very latest technologies in HTML 5, CSS 3, Bootstrap
+                        4
+                        and Javascript. I live in the swindon area of wiltshire, i can have your website up and running
+                        within days all i need from you is your company logo, a few pictures and some information about
+                        your company.
+                    </p>
+                    <button class="btn btn-primary btn-lg mx-auto d-block">
+                        <a href="about.html" class="text-white ">Click Here!</a>
+                    </button>
+                </div>
+
+                <div class="col-md-4">
+                    <img src="img/profile-pic3.jpg" alt="profile-pic">
+
+                </div>
+
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- HOMESECTION-2 -->
+
+    <section id="homesection-2" class="bg-secondary py-4 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="d-flex col-md-4">
+                    <img src="img/paintbrush-img.png" alt="paintbrush-picture">
+                </div>
+                <div class="col-md-8 text-center">
+                    <h2 class="display-3">My Skills</h3>
+                        <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Maiores
+                            similique ratione
+                            reiciendis
+                            dolorem quod accusamus veniam perferendis consequatur, iusto esse. Maxime, debitis aperiam
+                            corporis ut, provident totam quo a dolorem sunt dolorum similique! Excepturi laborum
+                            reiciendis
+                            nemo et. Obcaecati sapiente incidunt tempore animi illo, odit veniam consequatur est
+                            maiores,
+                            non quam accusamus libero iure quos nulla saepe nesciunt porro! Dolorum iusto sit possimus
+                            beatae quibusdam tenetur, omnis molestias maxime vero, illum illo neque facilis saepe
+                            consequuntur magni voluptate eligendi ratione hic earum placeat, natus impedit nesciunt.
+                            Aut,
+                            iusto sed, perspiciatis deleniti maxime aliquid nostrum obcaecati necessitatibus doloribus
+                            porro beatae possimus quas voluptas? Debitis alias, optio quidem, magnam provident atque
+                            nihil
+                            placeat pariatur consequatur dolor ipsam repellendus laborum repellat soluta recusandae
+                            illo
+                            saepe commodi quibusdam, eligendi eaque harum! Perferendis, ipsam? Nobis ullam placeat
+                            similique nulla sint beatae saepe dolores explicabo, dolor, temporibus aliquid soluta?
+                            Pariatur
+                            ducimus excepturi suscipit minima cupiditate ipsum!
+                        </p>
+                        <button class="btn btn-white btn-lg">
+                            <a href="skills.html" class="text-primary">Click Here!</a>
+                        </button>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- HOMESECTION-3 -->
+
+    <section id="homesection-3" class="bg-white py-4 text-dark">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-8 text-center">
+                    <h2 class="display-3">Examples</h2>
+                    <p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas obcaecati
+                        quibusdam, quam minus
+                        impedit cumque vero est aperiam consequatur sapiente incidunt enim a suscipit! Labore
+                        accusantium itaque incidunt, nulla laborum tenetur ea vel aspernatur inventore? Quia eos
+                        dolorem quaerat sint vitae corrupti fuga sapiente? Fugiat consequatur neque vero sapiente a
+                        odio architecto assumenda ab sed, dicta vel delectus debitis enim possimus ratione. Esse,
+                        repellendus soluta. Placeat sapiente architecto consequatur recusandae magnam a est saepe
+                        voluptas mollitia libero voluptates ducimus ea modi, aliquid hic in reprehenderit minima rerum.
+                        Voluptatibus maxime totam animi mollitia commodi nesciunt tempora, ea itaque minima. Eum,
+                        labore!
+                    </p>
+
+                    <!-- PROBLEMS LINKING EXAMPLES.HTML -->
+                    <button class="btn btn-primary btn-lg btn-block text-white">
+                        <a href="examples.html" class="text-white">Click Here!</a>
+                    </button>
+                </div>
+                <div class="d-flex col-md-4">
+                    <img src="img/code-editor-pic.jfif" alt="editor-picture" class="rounded-circle">
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+    <!-- HOMESECTION-4 -->
+
+    <section id="homesection-4" class="py-4 bg-secondary text-white text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+
+                    <i class="fas fa-envelope-open-text fa-9x mt-5"></i>
+                </div>
+                <div class="col-md-8">
+                    <h2 class="display-3">Contact Me</h2>
+                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                        consequatur natus laudantium
+                        eum rerum deleniti porro voluptatum excepturi. Iste animi quidem corporis, provident quisquam
+                        ea reprehenderit voluptatibus obcaecati harum suscipit cumque impedit eveniet. Animi, est enim!
+                        Architecto, velit nemo, ex voluptatibus facilis amet totam natus dolore vero numquam, illo
+                        possimus magnam similique delectus harum earum exercitationem nulla quas unde laudantium! Vitae
+                        libero eaque porro ipsum provident atque eos totam laboriosam, reprehenderit rem ab culpa
+                        rerum!</p>
+                    <button class="btn btn-white btn-lg text-primary">
+                        <a href="contact.html">Click Here!</a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+    <!--  FOOTER -->
+
+
+    <footer id="main-footer" class="p-4 bg-dark text-white  ">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>Copyright &copy; Andrew French <span id="year">
+                        </span></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+
+
+    <script>
+        // Get the current year for the copyright
+        $('#year').text(new Date().getFullYear());</script>
 
 </body>
 
