Changed header text to white, altered skill section img.

--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
                         <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="services.html" class="nav-link">Services</a>
+                        <a href="skills.html" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="examples.html" class="nav-link">Examples</a>
                     </li>
                     <li class="nav-item active">
                         <a href="contact.html" class="nav-link">Contact</a>
