--- a/examples.html
+++ b/examples.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Andrew French CV</title>
 
@@ -16,26 +15,28 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary">
+    <!--  NAVBAR -->
+
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-4">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Andrew French</a>
+            <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav ml-auto">
 
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="about.html" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item active">
-                        <a href="services.html" class="nav-link">Services</a>
-                    </li>
                     <li class="nav-item">
                         <a href="skills.html" class="nav-link">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="examples.html" class="nav-link">Examples</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -48,21 +49,28 @@
 
 
 
+    <!--  FOOTER -->
 
 
-
-
-
+    <footer id="main-footer" class="p-4 bg-dark text-white  ">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>Copyright &copy; Andrew French <span id="year">
+                        </span></p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
 
 
+    <script>
+        // Get the current year for the copyright
+        $('#year').text(new Date().getFullYear());</script>
 
 </body>
 
