--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
     <!-- HERO SECTION -->
-    <div id="hero-section" class="text-center">
+    <div id="hero-section" class="dark-overlay d-flex justify-content-center align-items-center text-white mt-0">
         <div>
             <h1 class="display-1">Andrew French</h1>
-            <h4 class="display-4">Web Developer</h4>
+            <h4 class="display-4 text-center">Web Developer</h4>
         </div>
     </div>
 
@@ -42,10 +42,10 @@
                         <a href="about.html" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="services.html" class="nav-link">Services</a>
+                        <a href="skills.html" class="nav-link">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
+                        <a href="examples.html" class="nav-link">Examples</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -78,12 +78,8 @@
 
                 <div class="col-md-4">
                     <img src="img/profile-pic3.jpg" alt="profile-pic">
-
                 </div>
-
-
             </div>
-
         </div>
     </section>
 
@@ -92,7 +88,7 @@
     <section id="homesection-2" class="bg-secondary py-4 text-white">
         <div class="container">
             <div class="row">
-                <div class="d-flex col-md-4">
+                <div class="col-md-4 img-fluid d-flex justify-content-center align-items-center">
                     <img src="img/paintbrush-img.png" alt="paintbrush-picture">
                 </div>
                 <div class="col-md-8 text-center">
@@ -124,9 +120,7 @@
                             <a href="skills.html" class="text-primary">Click Here!</a>
                         </button>
                 </div>
-
             </div>
-
         </div>
     </section>
 
@@ -149,8 +143,6 @@
                         Voluptatibus maxime totam animi mollitia commodi nesciunt tempora, ea itaque minima. Eum,
                         labore!
                     </p>
-
-                    <!-- PROBLEMS LINKING EXAMPLES.HTML -->
                     <button class="btn btn-primary btn-lg btn-block text-white">
                         <a href="examples.html" class="text-white">Click Here!</a>
                     </button>
@@ -158,9 +150,7 @@
                 <div class="d-flex col-md-4">
                     <img src="img/code-editor-pic.jfif" alt="editor-picture" class="rounded-circle">
                 </div>
-
             </div>
-
         </div>
     </section>
 
@@ -190,11 +180,6 @@
             </div>
         </div>
     </section>
-
-
-
-
-
 
     <!--  FOOTER -->
 
