--- a/skills.html
+++ b/skills.html
@@ -31,11 +31,11 @@
                     <li class="nav-item">
                         <a href="about.html" class="nav-link">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="services.html" class="nav-link">Services</a>
-                    </li>
                     <li class="nav-item active">
                         <a href="skills.html" class="nav-link">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="examples.html" class="nav-link">Examples</a>
                     </li>
                     <li class="nav-item">
                         <a href="contact.html" class="nav-link">Contact</a>
@@ -45,6 +45,10 @@
             </div>
         </div>
     </nav>
+
+    <!-- SKILLSSECTION-1 -->
+
+
 
 
 
