Changed buttons on home page, and made a start on examples and contact pages.

--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-3">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Andrew French</a>
+            <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,6 +45,36 @@
             </div>
         </div>
     </nav>
+
+    <!-- CONTACT-SECTION-1 -->
+
+    <div id="contact-section-1" class="py-4 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <i class="fas fa-envelope-open-text fa-9x"></i>
+                    <h2 class="display-3">Contact Me</h2>
+                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, ad
+                        dolorem. Natus assumenda, temporibus amet nostrum quibusdam perferendis quae sed vitae
+                        asperiores, omnis tempore ipsa aut pariatur eum molestiae voluptatem iste qui. Quasi minus
+                        officiis, dicta deleniti asperiores tempora modi ullam itaque at excepturi, vel hic qui
+                        molestias esse quaerat sit. Natus id itaque earum animi, ducimus in ullam quibusdam obcaecati
+                        quo tempore quisquam iste rerum libero minima, eum iusto. Eius minima nobis optio ipsa minus
+                        totam doloribus debitis quis.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- CONTACT-FOOTER -->
+
+    <div id="contact-footer" class="text-center p-4 bg-dark text-white">
+        <div class="container">
+            <div class="col">
+                <p>Copyright &copy; Andrew French <span id="year"></span></p>
+            </div>
+        </div>
+    </div>
 
 
 
