--- a/examples.html
+++ b/examples.html
@@ -17,7 +17,7 @@
 
     <!--  NAVBAR -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-4">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-3">
         <div class="container">
             <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav ml-auto">
 
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
@@ -35,7 +35,7 @@
                     <li class="nav-item">
                         <a href="skills.html" class="nav-link">Skills</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a href="examples.html" class="nav-link">Examples</a>
                     </li>
                     <li class="nav-item">
@@ -47,12 +47,29 @@
         </div>
     </nav>
 
+    <!-- EXAMPLES-SECTION-1 -->
+
+    <div id="examples-section-1" class="py-4 text-center">
+        <div class="container">
+            <img src="img/code-editor-pic.jfif" alt="code-editor-image" class="rounded-circle">
+            <h2 class="display-3 text-center">Examples</h2>
+            <p class="text-justify">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, maiores excepturi?
+                Praesentium
+                molestiae
+                dicta incidunt suscipit aut harum expedita illum! Odio alias, aliquid aspernatur porro iste voluptatum
+                necessitatibus itaque? Pariatur, doloribus autem incidunt harum similique modi ratione nostrum ipsum
+                accusantium ut porro necessitatibus vero repellat in corporis eligendi consequuntur, voluptates fuga
+                iure
+                veritatis eos atque debitis quisquam omnis. Est, ratione!</p>
+        </div>
+    </div>
+
 
 
     <!--  FOOTER -->
 
 
-    <footer id="main-footer" class="p-4 bg-dark text-white  ">
+    <footer id="main-footer" class="p-4 bg-dark text-white text-center">
         <div class="container">
             <div class="row">
                 <div class="col">
