--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <!--  NAVBAR -->
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-4">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-3">
         <div class="container">
             <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
@@ -71,7 +71,7 @@
                         within days all i need from you is your company logo, a few pictures and some information about
                         your company.
                     </p>
-                    <button class="btn btn-primary btn-lg mx-auto d-block">
+                    <button class="btn btn-primary btn-outline-dark btn-lg mx-auto w-50">
                         <a href="about.html" class="text-white ">Click Here!</a>
                     </button>
                 </div>
@@ -116,8 +116,8 @@
                             Pariatur
                             ducimus excepturi suscipit minima cupiditate ipsum!
                         </p>
-                        <button class="btn btn-white btn-lg">
-                            <a href="skills.html" class="text-primary">Click Here!</a>
+                        <button class="btn btn-lg">
+                            <a href="skills.html">Click Here!</a>
                         </button>
                 </div>
             </div>
@@ -130,7 +130,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-8 text-center">
+                <div class="col-md-8 text-center my-auto">
                     <h2 class="display-3">Examples</h2>
                     <p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas obcaecati
                         quibusdam, quam minus
@@ -143,7 +143,7 @@
                         Voluptatibus maxime totam animi mollitia commodi nesciunt tempora, ea itaque minima. Eum,
                         labore!
                     </p>
-                    <button class="btn btn-primary btn-lg btn-block text-white">
+                    <button class="btn btn-primary btn-outline-dark btn-lg text-white">
                         <a href="examples.html" class="text-white">Click Here!</a>
                     </button>
                 </div>
@@ -173,7 +173,7 @@
                         possimus magnam similique delectus harum earum exercitationem nulla quas unde laudantium! Vitae
                         libero eaque porro ipsum provident atque eos totam laboriosam, reprehenderit rem ab culpa
                         rerum!</p>
-                    <button class="btn btn-white btn-lg text-primary">
+                    <button class="btn btn-lg">
                         <a href="contact.html">Click Here!</a>
                     </button>
                 </div>
@@ -181,10 +181,16 @@
         </div>
     </section>
 
+    <!-- CONTACT-INFORMATION-SECTION  -->
+
+    <div id="contact-information-section" class="bg-secondary text-white">
+
+    </div>
+
     <!--  FOOTER -->
 
 
-    <footer id="main-footer" class="p-4 bg-dark text-white  ">
+    <footer id="main-footer" class="p-4 bg-dark text-white text-center">
         <div class="container">
             <div class="row">
                 <div class="col">
