--- a/skills.html
+++ b/skills.html
@@ -16,9 +16,9 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-3">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Andrew French</a>
+            <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,9 +46,64 @@
         </div>
     </nav>
 
-    <!-- SKILLSSECTION-1 -->
+    <!-- SKILLS-SECTION-1 -->
 
+    <div id="skills-section-1" class="text-center py-4">
+        <div class="container">
+            <div class="col">
+                <img src="img/paintbrush-img.png" alt="paintbrush-image" class="text-secondary">
+            </div>
+            <h2 class="display-3">My Skills</h2>
+            <p>Hi my names Andrew French and im a front end web developer, i produce multiple page websites to
+                meet
+                peoples individual requirements using the very latest technologies in HTML 5, CSS 3, SCSS, BOOTSTRAP
+                4
+                and JAVASCRIPT. I live in the swindon area of wiltshire, i can have your website up and running
+                within days. All i need from you is your company logo, a few pictures and some information about
+                your company and your away!</p>
+        </div>
+    </div>
 
+    <!-- SKILLS-SECTION-2 -->
+
+    <div id="skills-section-2" class="py-5">
+        <div class="container">
+            <h4 class="mb-2">HTML 5</h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 100%" aria-valuenow="10"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h4 class="mb-2">CSS 3</h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 95%"
+                    aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+
+            <h4 class="mb-2">BOOTSTRAP 4</h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 90%"
+                    aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h4 class="mb-2">SCSS</h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 80%"
+                    aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+            <h4>JAVASCRIPT</h4>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped bg-primary" role="progressbar" style="width: 30%"
+                    aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- SKILLS-FOOTER -->
+
+    <div id="skills-footer" class="py-4 text-center bg-dark text-white">
+        <div class="col">
+            <p>Copyright &copy; Andrew French <span id="year"></span></p>
+        </div>
+    </div>
 
 
 
