altered buttons home page with media queries, and img examples page.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- HERO SECTION -->
     <div id="hero-section" class="dark-overlay d-flex justify-content-center align-items-center text-white mt-0">
         <div>
-            <h1 class="display-1">Andrew French</h1>
+            <h1 class="display-1 d-none d-md-block">Andrew French</h1>
             <h4 class="display-4 text-center">Web Developer</h4>
         </div>
     </div>
@@ -174,7 +174,7 @@
                         libero eaque porro ipsum provident atque eos totam laboriosam, reprehenderit rem ab culpa
                         rerum!</p>
                     <button class="btn btn-lg">
-                        <a href="contact.html">Click Here!</a>
+                        <a href="contact.html">Contact!</a>
                     </button>
                 </div>
             </div>
