--- a/skills.html
+++ b/skills.html
@@ -48,10 +48,10 @@
 
     <!-- SKILLS-SECTION-1 -->
 
-    <div id="skills-section-1" class="text-center py-4">
+    <div id="skills-section-1" class="text-center py-5">
         <div class="container">
             <div class="col">
-                <img src="img/paintbrush-img.png" alt="paintbrush-image" class="text-secondary">
+                <img src="img/paintbrush-img.png" alt="paintbrush-image" class="paintbrush-img">
             </div>
             <h2 class="display-3">My Skills</h2>
             <p>Hi my names Andrew French and im a front end web developer, i produce multiple page websites to
