Did some stuff on home page

--- a/contact.html
+++ b/contact.html
@@ -66,12 +66,36 @@
         </div>
     </div>
 
+    <!-- CONTACT CARD -->
+
+    <div id="contact-card" class="text-dark p-3 col-md-6 mb-3 rounded text-center mx-auto">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <div class="card p-4">
+                        <div class="card-header text-center">
+                            <h2>Get Intouch</h2>
+                        </div>
+                        <div class="card-body">
+                            <h4>Email</h4>
+                            <p>andy.french@hotmail.co.uk</p>
+                            <hr>
+                            <h4>Phone</h4>
+                            <p>07387176820</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- CONTACT-FOOTER -->
 
     <div id="contact-footer" class="text-center p-4 bg-dark text-white">
         <div class="container">
             <div class="col">
-                <p>Copyright &copy; Andrew French <span id="year"></span></p>
+                <p>Copyright &copy; Andrew French 2018</p>
             </div>
         </div>
     </div>
