--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
 
     <!-- HERO SECTION -->
-    <div id="hero-section" class="dark-overlay d-flex justify-content-center align-items-center text-white mt-0">
+    <div id="hero-section" class="dark-overlay d-flex justify-content-center align-items-center text-white">
         <div>
-            <h1 class="display-1 d-none d-md-block">Andrew French</h1>
-            <h4 class="display-4 text-center">Web Developer</h4>
+            <h1 class="display-1 d-md-block text-center">Andrew French</h1>
+            <h4 class="display-3 text-center">Web Developer</h4>
         </div>
     </div>
 
@@ -34,7 +34,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarcollapse">
                 <ul class="navbar-nav ml-auto">
-
                     <li class="nav-item active">
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
@@ -51,7 +50,6 @@
                         <a href="contact.html" class="nav-link">Contact</a>
                     </li>
                 </ul>
-
             </div>
         </div>
     </nav>
@@ -203,6 +201,10 @@
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
 
