Cleaned up code a little bit

--- a/examples.html
+++ b/examples.html
@@ -49,7 +49,7 @@
 
     <!-- EXAMPLES-SECTION-1 -->
 
-    <div id="examples-section-1" class="py-4 text-center">
+    <section id="examples-section-1" class="py-4 text-center">
         <div class="container">
             <img src="img/code-editor-pic.jfif" alt="code-editor-image" class="rounded-circle">
             <h2 class="display-3 text-center">Examples</h2>
@@ -62,7 +62,7 @@
                 iure
                 veritatis eos atque debitis quisquam omnis. Est, ratione!</p>
         </div>
-    </div>
+    </section>
 
 
 
