--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!-- HERO SECTION -->
-    <div id="hero-section" class="dark-overlay d-flex justify-content-center align-items-center text-white">
+    <div id="hero-section" class="d-flex justify-content-center align-items-center text-white">
         <div>
             <h1 class="display-1 d-md-block text-center">Andrew French</h1>
             <h4 class="display-3 text-center">Web Developer</h4>
