--- a/contact.html
+++ b/contact.html
@@ -1,123 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
+      integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Andrew French CV</title>
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark text-primary py-3">
-        <div class="container">
-            <a href="index.html" class="navbar-brand font-weight-bold">Andrew French</a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarcollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarcollapse">
-                <ul class="navbar-nav ml-auto">
-
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="about.html" class="nav-link">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="skills.html" class="nav-link">Skills</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="examples.html" class="nav-link">Examples</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="contact.html" class="nav-link">Contact</a>
-                    </li>
-                </ul>
-
-            </div>
+      <div class="container">
+        <a href="index.html" class="navbar-brand font-weight-bold"
+          >Andrew French</a
+        >
+        <button
+          class="navbar-toggler"
+          data-toggle="collapse"
+          data-target="#navbarcollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarcollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="skills.html" class="nav-link">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="examples.html" class="nav-link">Examples</a>
+            </li>
+            <li class="nav-item active">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
 
     <!-- CONTACT-SECTION-1 -->
 
-    <div id="contact-section-1" class="py-4 text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <i class="fas fa-envelope-open-text fa-9x"></i>
-                    <h2 class="display-3">Contact Me</h2>
-                    <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, ad
-                        dolorem. Natus assumenda, temporibus amet nostrum quibusdam perferendis quae sed vitae
-                        asperiores, omnis tempore ipsa aut pariatur eum molestiae voluptatem iste qui. Quasi minus
-                        officiis, dicta deleniti asperiores tempora modi ullam itaque at excepturi, vel hic qui
-                        molestias esse quaerat sit. Natus id itaque earum animi, ducimus in ullam quibusdam obcaecati
-                        quo tempore quisquam iste rerum libero minima, eum iusto. Eius minima nobis optio ipsa minus
-                        totam doloribus debitis quis.</p>
-                </div>
-            </div>
+    <section id="contact-section-1" class="py-4 text-center">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <i class="fas fa-envelope-open-text fa-9x"></i>
+            <h2 class="display-3">Contact Me</h2>
+            <p class="text-justify">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore,
+              ad dolorem. Natus assumenda, temporibus amet nostrum quibusdam
+              perferendis quae sed vitae asperiores, omnis tempore ipsa aut
+              pariatur eum molestiae voluptatem iste qui. Quasi minus officiis,
+              dicta deleniti asperiores tempora modi ullam itaque at excepturi,
+              vel hic qui molestias esse quaerat sit. Natus id itaque earum
+              animi, ducimus in ullam quibusdam obcaecati quo tempore quisquam
+              iste rerum libero minima, eum iusto. Eius minima nobis optio ipsa
+              minus totam doloribus debitis quis.
+            </p>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
 
     <!-- CONTACT CARD -->
 
-    <div id="contact-card" class="text-dark p-3 col-md-6 mb-3 rounded text-center mx-auto">
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <div class="card p-4">
-                        <div class="card-header text-center">
-                            <h2>Get Intouch</h2>
-                        </div>
-                        <div class="card-body">
-                            <h4>Email</h4>
-                            <p>andy.french@hotmail.co.uk</p>
-                            <hr>
-                            <h4>Phone</h4>
-                            <p>07387176820</p>
-
-                        </div>
-                    </div>
-                </div>
+    <section
+      id="contact-card"
+      class="text-dark p-3 col-md-6 mb-3 rounded text-center mx-auto"
+    >
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card p-4">
+              <div class="card-header text-center"><h2>Get Intouch</h2></div>
+              <div class="card-body">
+                <h4>Email</h4>
+                <p>andy.french@hotmail.co.uk</p>
+                <hr />
+                <h4>Phone</h4>
+                <p>07387176820</p>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
+    </section>
 
     <!-- CONTACT-FOOTER -->
 
-    <div id="contact-footer" class="text-center p-4 bg-dark text-white">
-        <div class="container">
-            <div class="col">
-                <p>Copyright &copy; Andrew French 2018</p>
-            </div>
-        </div>
-    </div>
+    <footer id="contact-footer" class="text-center p-4 bg-dark text-white">
+      <div class="container">
+        <div class="col"><p>Copyright &copy; Andrew French 2018</p></div>
+      </div>
+    </footer>
 
-
-
-
-
-
-
-
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-
-
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
