--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,7 @@
 
     <!-- SKILLS-SECTION-1 -->
 
-    <div id="skills-section-1" class="text-center py-5">
+    <section id="skills-section-1" class="text-center py-5">
         <div class="container">
             <div class="col">
                 <img src="img/paintbrush-img.png" alt="paintbrush-image" class="paintbrush-img">
@@ -62,11 +62,11 @@
                 within days. All i need from you is your company logo, a few pictures and some information about
                 your company and your away!</p>
         </div>
-    </div>
+    </section>
 
     <!-- SKILLS-SECTION-2 -->
 
-    <div id="skills-section-2" class="py-5">
+    <section id="skills-section-2" class="py-5">
         <div class="container">
             <h4 class="mb-2">HTML 5</h4>
             <div class="progress">
@@ -95,15 +95,15 @@
                     aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- SKILLS-FOOTER -->
 
-    <div id="skills-footer" class="py-4 text-center bg-dark text-white">
+    <footer id="skills-footer" class="py-4 text-center bg-dark text-white">
         <div class="col">
             <p>Copyright &copy; Andrew French <span id="year"></span></p>
         </div>
-    </div>
+    </footer>
 
 
 
